# raybench

./: .gitignore  1  README.md  bench.rs  cpprb  cpprb.cpp  cpprb_mt  cpprb_mt.cpp  cpu.sh  crb-omp.c  crb.c  crb.dbl.c  crb.omp.c  crrb.cr  csrb-mt.cs  csrb.cs  elixirrb-mp.exs  elixirrb.exs  elixirrb.mp.exs  gorb.go  gorb_alt.go  hsrb.hs  jlrb.jl  jsrb.js  jsrb_dod.js  lisprb.lisp  luarb.lua  makefile  nimrb-dbl.nim  nimrb.nim  nimrb_f64.nim  nimrb_fn  nimrb_opt  nimrb_opt.nim  nimrb_pmap  nimrb_pmap.nim  ocamlrb.ml  os.sh  pyrb.py  rbrb.rb  (+9 more)
ada/: adarb.adb
asm/: asmrb.fasm
assemblyscript/: compile.sh  index.js  package-lock.json  package.json  run.sh  version.sh
c/: compile.sh  crb-dbl.c  crb-omp.c  crb-vec.c  crb_opt.c  run.sh  version.sh
cpp/: cpprb.cpp  cpprb_mt.cpp
crystal/: crrb.cr
csharp/: compile.sh  run.sh  version.sh
csrb/: compile.sh  csrb.cs  run.sh
factor/: factorrb.factor  run.sh  version.sh
gleam/: README.md  compile.sh  gleam.toml  manifest.toml  run.sh
go/: compile.sh  run.sh  version.sh
haxe/: Haxerb.hx  run.sh  version.sh
java/: compile.sh  javarb.java  run.sh  version.sh
javascript/: jsrb.js  run.sh  version.sh
julia/: jlrb.jl
lisp/: compile.sh  lisprb-opt0.lisp  lisprb-opt1.lisp  lisprb.lisp  lisprb_alt.lisp  run.sh  version.sh
lua/: luarb_opt.lua  run.sh  run_jit.sh  version.sh
luajit/: luarb.lua  run.sh  version.sh
metal/: Cargo.toml  build_shader.sh
metal/src/: main.rs  shader.air  shader.metal  shader.metallib
moonbit/: README.md  compile.sh  moon.mod.json  run.sh  version.sh
nim/: compile.sh  nimrb.nim  (+4 more)
(+49 files in other folders)
